fixed some issues with false positives and garbage data, optimized code